Fixed need for relative positioning with html comment and extra height on mobile version with font declaration. Those pesky spaces on inline-block elements! Both mobile and desktop finished.

--- a/#6: Site Duplication - TokenTransit/styles.css
+++ b/#6: Site Duplication - TokenTransit/styles.css
@@ -432,6 +432,7 @@ ul.social-media-buttons li a:hover {
 .floating-support-button:hover {
     background-color: #217eb0;
     transition: background-color 300ms;
+    font-family: system-ui;
 }
 
 .svg-container {
@@ -452,8 +453,6 @@ ul.social-media-buttons li a:hover {
 }
 
 .support-span {
-    position: relative;
-    right: 3px;
     font-weight: 700;
     letter-spacing: 0.6px;
     font-size: 15px;
@@ -461,7 +460,6 @@ ul.social-media-buttons li a:hover {
     display: inline-block;
     vertical-align: middle;
     font-family: system-ui, "-apple-system", "BlinkMacSystemFont", "Segoe UI", "Roboto", "Oxygen-Sans", "Ubuntu", "Cantarell", "Helvetica Neue", Arial, sans-serif;
-
 }
 
 
